<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/idReportarPerdido_layout"
    tools:context=".ReportarPerdidoActivity">

    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/custom"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/nada"
            android:paddingHorizontal="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageSalir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/nada"
            android:paddingHorizontal="20dp"
            android:scaleType="fitCenter"
            android:onClick="Salir"
            app:srcCompat="@drawable/ic_logout"
            app:tint="@color/white" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraSuperior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="59dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporte_animal_perdido"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/custom" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/generop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/genero"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/custom"
                    />

                <Spinner
                    android:id="@+id/spinnerGenero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/genero"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/razap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/raza"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/custom"
                    />

                <Spinner
                    android:id="@+id/spinnerRaza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/raza"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tamano"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/custom" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/tamanos"
                    android:minHeight="48dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/descripcionp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/descripcion"
                android:layout_marginTop="10dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ultima_ubicacion_conocida"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/custom" />



            <EditText
                android:id="@+id/ubicacionp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/fijar_en_el_mapa"
                android:minHeight="48dp"
                android:paddingStart="20dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/adjuntar_foto_del_animal_perdido"
                android:layout_gravity="left"
                android:paddingStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/imageViewFotoPerdido"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_heart" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_selec_Imgp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/custom"
                        android:drawableLeft="@drawable/ic_image"
                        android:drawableTint="@color/white"
                        android:minHeight="48dp"
                        android:text="@string/galeria"
                        android:textAllCaps="false" />


                    <Button
                        android:id="@+id/button_open_camerap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/custom"
                        android:drawableLeft="@drawable/ic_camera"
                        android:drawableTint="@color/white"
                        android:minHeight="48dp"
                        android:text="@string/camara"
                        android:textAllCaps="false" />

                </LinearLayout>


            </LinearLayout>


            <Button
                android:id="@+id/FinalizarReportePerdido"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/custom"
                android:drawableLeft="@drawable/ic_logo"
                android:drawableTint="@color/white"
                android:minHeight="48dp"
                android:onClick="EnviarReporte"
                android:text="Reportar"
                android:textAllCaps="false" />


        </LinearLayout>



    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />




</androidx.constraintlayout.widget.ConstraintLayout>