<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerdidosFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Reportes de animales perdidos"
                android:gravity="center"
                android:textColor="@color/custom"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgperdidos1"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genperdidos1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero" />

                    <TextView
                        android:id="@+id/razaperdidos1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/raza" />

                    <TextView
                        android:id="@+id/tamanoperdidos1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tamano" />

                    <TextView
                        android:id="@+id/desperdidos1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/descripcion" />
                    <TextView
                        android:id="@+id/ubiperdidos1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ultima_ubicacion_conocida" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgperdidos2"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genperdidos2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero" />

                    <TextView
                        android:id="@+id/razaperdidos2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/raza" />

                    <TextView
                        android:id="@+id/tamanoperdidos2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tamano" />

                    <TextView
                        android:id="@+id/desperdidos2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/descripcion" />
                    <TextView
                        android:id="@+id/ubiperdidos2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ultima_ubicacion_conocida" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgperdidos3"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genperdidos3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero" />

                    <TextView
                        android:id="@+id/razaperdidos3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/raza" />

                    <TextView
                        android:id="@+id/tamanoperdidos3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tamano" />

                    <TextView
                        android:id="@+id/desperdidos3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/descripcion" />
                    <TextView
                        android:id="@+id/ubiperdidos3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ultima_ubicacion_conocida" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgperdidos4"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genperdidos4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero" />

                    <TextView
                        android:id="@+id/razaperdidos4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/raza" />

                    <TextView
                        android:id="@+id/tamanoperdidos4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tamano" />

                    <TextView
                        android:id="@+id/desperdidos4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/descripcion" />
                    <TextView
                        android:id="@+id/ubiperdidos4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ultima_ubicacion_conocida" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgperdidos5"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genperdidos5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero" />

                    <TextView
                        android:id="@+id/razaperdidos5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/raza" />

                    <TextView
                        android:id="@+id/tamanoperdidos5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tamano" />

                    <TextView
                        android:id="@+id/desperdidos5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/descripcion" />
                    <TextView
                        android:id="@+id/ubiperdidos5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ultima_ubicacion_conocida" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/custom" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>